==> ErBWs/CH32-Bike-Overland/2.Firmware/1.FrontCar/SeekFree_MM32F327X_G9P_Opensource_Library/project/user/src/isr.c <==
#include "isr.h"

void UART4_IRQHandler(void)
{
    if(UART4->ISR & 0x00000001)                                                 // 串口发送缓冲空中断
    {
        UART4->ICR |= 0x00000001;                                               // 清除中断标志位
        // 此处编写用户代码
        // 务必填写数据或者关闭中断 否则会一直触发串口发送中断

        // 此处编写用户代码
    }
    if(UART4->ISR & 0x00000002)                                                 // 串口接收缓冲中断
    {
        UART4->ICR |= 0x00000002;                                               // 清除中断标志位
        // 此处编写用户代码
        // 务必读取数据或者关闭中断 否则会一直触发串口接收中断

        // 此处编写用户代码
    }
}

void UART5_IRQHandler(void)
{
    if(UART5->ISR & 0x00000001)                                                 // 串口发送缓冲空中断
    {
        UART5->ICR |= 0x00000001;                                               // 清除中断标志位
        // 此处编写用户代码
        // 务必填写数据或者关闭中断 否则会一直触发串口发送中断

        // 此处编写用户代码
    }
    if(UART5->ISR & 0x00000002)                                                 // 串口接收缓冲中断
    {
        UART5->ICR |= 0x00000002;                                               // 清除中断标志位
        // 此处编写用户代码
        // 务必读取数据或者关闭中断 否则会一直触发串口接收中断

        // 此处编写用户代码
    }
}

void UART6_IRQHandler(void)
{
    if(UART6->ISR & 0x00000001)                                                 // 串口发送缓冲空中断
    {
        UART6->ICR |= 0x00000001;                                               // 清除中断标志位
        // 此处编写用户代码
        // 务必填写数据或者关闭中断 否则会一直触发串口发送中断

        // 此处编写用户代码
    }
    if(UART6->ISR & 0x00000002)                                                 // 串口接收缓冲中断
    {
        UART6->ICR |= 0x00000002;                                               // 清除中断标志位
        wireless_module_uart_handler();
        // 此处编写用户代码
        // 务必读取数据或者关闭中断 否则会一直触发串口接收中断

        // 此处编写用户代码
    }
}

void UART7_IRQHandler(void)
{
    if(UART7->ISR & 0x00000001)                                                 // 串口发送缓冲空中断
    {
        UART7->ICR |= 0x00000001;                                               // 清除中断标志位
        // 此处编写用户代码
        // 务必填写数据或者关闭中断 否则会一直触发串口发送中断

        // 此处编写用户代码
    }
    if(UART7->ISR & 0x00000002)                                                 // 串口接收缓冲中断
    {
        UART7->ICR |= 0x00000002;                                               // 清除中断标志位
        // 此处编写用户代码
        // 务必读取数据或者关闭中断 否则会一直触发串口接收中断

        // 此处编写用户代码
    }
}

void UART8_IRQHandler(void)
{
    if(UART8->ISR & 0x00000001)                                                 // 串口发送缓冲空中断
    {
        UART8->ICR |= 0x00000001;                                               // 清除中断标志位
        // 此处编写用户代码
        // 务必填写数据或者关闭中断 否则会一直触发串口发送中断

        // 此处编写用户代码
    }
    if(UART8->ISR & 0x00000002)                                                 // 串口接收缓冲中断
    {
        UART8->ICR |= 0x00000002;                                               // 清除中断标志位
        camera_uart_handler();
        // 此处编写用户代码
        // 务必读取数据或者关闭中断 否则会一直触发串口接收中断

        // 此处编写用户代码
    }
}

void EXTI9_5_IRQHandler(void)
{
    if(EXTI->PR&(0x00000001 << 5))                                              // 检测 line5 是否触发
    {
        EXTI->PR |= (0x00000001 << 5);                                          // 清除 line5 触发标志
        // 此处编写用户代码 (A5/B5..G5) 引脚触发

        // 此处编写用户代码 (A5/B5..G5) 引脚触发
    }
    if(EXTI->PR&(0x00000001 << 6))                                              // 检测 line6 是否触发
    {
        EXTI->PR |= (0x00000001 << 6);                                          // 清除 line6 触发标志
        // 此处编写用户代码 (A6/B6..G6) 引脚触发

        // 此处编写用户代码 (A6/B6..G6) 引脚触发
    }
    if(EXTI->PR&(0x00000001 << 7))                                              // 检测 line7 是否触发
    {
        EXTI->PR |= (0x00000001 << 7);                                          // 清除 line8 触发标志
        // 此处编写用户代码 (A7/B7..G7) 引脚触发

        // 此处编写用户代码 (A7/B7..G7) 引脚触发
    }
    if(EXTI->PR&(0x00000001 << 8))                                              // 检测 line8 是否触发
    {
        EXTI->PR |= (0x00000001 << 8);                                          // 清除 line8 触发标志
        camera_vsync_handler();
        // 此处编写用户代码 (A8/B8..G8) 引脚触发

        // 此处编写用户代码 (A8/B8..G8) 引脚触发
    }
    if(EXTI->PR&(0x00000001 << 9))                                              // 检测 line9 是否触发
    {
        EXTI->PR |= (0x00000001 << 9);                                          // 清除 line9 触发标志
        // 此处编写用户代码 (A9/B9..G9) 引脚触发

        // 此处编写用户代码 (A9/B9..G9) 引脚触发
    }
}
